--- a/Dump/view/adminhtml/templates/dump.phtml
+++ b/Dump/view/adminhtml/templates/dump.phtml
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" data-mage-init='{"Dump/filter.js": {"keySearch": "#keySearch", "table": ".table"}}'>
     <!-- <h1><?= $block->escapeHtml(__('Configuration Dump')) ?></h1> -->
 
 
